--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -276,9 +276,9 @@ dev-deploy:
     - apt-get update && apt-get install --assume-yes --no-install-recommends --show-upgraded libpoppler102=20.09.* libxml2-utils=2.9.* locales=2.31-* locales-all=2.31-* python3-pip=20.3.* poppler-utils=20.09.* xmlsec1=1.2.* zip=3.0-12 && pip3 install jsonpath-ng==1.5.3 Pillow==9.2.0 PyPDF2==2.10.0 && locale-gen fr_FR.UTF-8
     - echo "Test ${CI_COMMIT_REF_NAME} deployed on ${E2E_TESTS_TARGET_SERVER_URL} with Karate - These tests mustn't fail"
     - ./gradlew test -Dkarate.options="${KARATE_ADDITIONAL_TAGS}" -Dkarate.headless=true -Dkarate.baseUrl="https://${E2E_TESTS_TARGET_SERVER_URL}" -Dkarate.chromeBin=/opt/google/chrome/google-chrome
-    #- python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt
-  #after_script:
-    #- if [ ! -f build/karate-tests-fixme-ip-tag.txt ] ; then python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt ; fi
+    - python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt
+  after_script:
+    - if [ ! -f build/karate-tests-fixme-ip-tag.txt ] ; then python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt ; fi
   artifacts:
     when: always
     name: ${REPORT_NAME}
@@ -296,8 +296,8 @@ dev-deploy:
 .tolerant-e2e-tests-test:
   extends: [ .e2e-tests ]
   variables:
-    REPORT_NAME: "Karate - tests tolerant"
-    KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags @demo-simple-bde,@formats-de-signature,@legacy-bridge,@metadonnees --tags ~@ignore "
+    REPORT_NAME: "Karate - tests tolerant - ${KARATE_TENANT}"
+    KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags ${KARATE_TENANT} --tags ~@ignore "
 
 strict-e2e-tests-test-demo-simple-bde:
   extends: [ .strict-e2e-tests-test ]
