Set a memory limit on activeMq's JVM below the container's

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -301,6 +301,8 @@ services:
     restart: unless-stopped
     tty: true
     mem_limit: 256M
+    environment:
+      ACTIVEMQ_OPTS: "-Xms128M -Xmx208M"
 
 
   postgres:
