--- a/.env.dist
+++ b/.env.dist
@@ -48,8 +48,8 @@ KEYCLOAK_REALM=api
 KEYCLOAK_CLIENT_ID=ipcore-api
 KEYCLOAK_CLIENT_SECRET=<random-uuid>
 KEYCLOAK_WEB_CLIENT_ID=ipcore-web
-KEYCLOAK_USER=admin
-KEYCLOAK_PASSWORD=admin
+INITIAL_KEYCLOAK_ADMIN_USER=admin
+INITIAL_KEYCLOAK_ADMIN_PASSWORD=admin
 KEYCLOAK_DB_DATABASE=keycloak
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
