--- a/.env.dist
+++ b/.env.dist
@@ -54,6 +54,10 @@ KEYCLOAK_DB_DATABASE=keycloak
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
 
+
+INITIAL_IPARAPHEUR_ADMIN_USER=user
+INITIAL_IPARAPHEUR_ADMIN_PASSWORD=password
+
 CONTENT_HOST=alfresco
 CONTENT_PORT=8080
 
