--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,7 @@ services:
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
       - KEYCLOAK_CLIENT_SECRET
+      - INITIAL_IPARAPHEUR_ADMIN_USER
       - SECRET_PROTOCOL
       - SECRET_HOST
       - SECRET_PORT
@@ -349,6 +350,8 @@ services:
       - KEYCLOAK_CLIENT_SECRET
       - INITIAL_KEYCLOAK_ADMIN_USER
       - INITIAL_KEYCLOAK_ADMIN_PASSWORD
+      - INITIAL_IPARAPHEUR_ADMIN_USER
+      - INITIAL_IPARAPHEUR_ADMIN_PASSWORD
       - SMTP_HOST
       - SMTP_PORT
       - SMTP_USER
