--- a/src/main/resources/core/application-ipng.yml
+++ b/src/main/resources/core/application-ipng.yml
@@ -28,7 +28,7 @@ services:
 #
 
 # ipng:
-# #  lastRedisMessage: 1638444072643-0
-#   tenantToEntities:
+# #  last-redis-message: 1638444072643-0
+#   tenant-to-entities:
 #     1c6996ed-3cee-4ea3-bb77-afbc0f22bc44: montpellierEntityId
 #     2dea654b-beee-4745-bb21-5813e25bda1f: libricielEntityId
