--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
 
 
   core:
-    image: registry.libriciel.fr:443/public/signature/ip-core:1.0.5
+    image: registry.libriciel.fr:443/public/signature/ip-core:1.1.0
     restart: unless-stopped
     tty: true
     mem_limit: 1G
@@ -104,13 +104,13 @@ services:
 
 
   web:
-    image: registry.libriciel.fr:443/public/signature/ip-web:1.1.1
+    image: registry.libriciel.fr:443/public/signature/ip-web:1.2.0
     restart: unless-stopped
     tty: true
     mem_limit: 64M
     environment:
       - APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
-      - VERSION=5.0.0-beta49
+      - VERSION=5.0.0-RC1
       - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL}://${APPLICATION_HOST}/auth
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID=${KEYCLOAK_WEB_CLIENT_ID}
@@ -119,7 +119,7 @@ services:
 
 
   workflow:
-    image: registry.libriciel.fr/public/signature/workflow:1.5.7
+    image: registry.libriciel.fr/public/signature/workflow:1.6.0
     restart: unless-stopped
     tty: true
     mem_limit: 768M
@@ -177,7 +177,7 @@ services:
 
 
   legacy-bridge:
-    image: registry.libriciel.fr/public/signature/legacy-bridge:1.2.5
+    image: registry.libriciel.fr/public/signature/legacy-bridge:1.2.6
     restart: unless-stopped
     tty: true
     mem_limit: 512M
