--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ variables:
     TARGETED_ENVIRONNEMENT_USER: ${E2E_TESTS_TARGET_SERVER_USER}
     SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
     RESET_DATA: "TRUE"
-    OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_TAG}
+    OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_DEV}
   environment: &e2e-test-environment
     name: Charge/Tests e2e
     url: https://${E2E_TESTS_TARGET_SERVER_URL}
@@ -202,10 +202,12 @@ strict-e2e-tests-deploy:
       when: never
     - if: $NIGHTLY == "TRUE"
       when: always
-      variables:
-        OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_DEV}
-    - if: $CI_COMMIT_BRANCH == 'develop' || $CI_COMMIT_TAG != null
+    - if: $CI_COMMIT_BRANCH == 'develop'
       when: always
+    - if: $CI_COMMIT_TAG != null
+      when: always
+      variables:
+        OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_TAG}
     - when: manual
   allow_failure: false
   variables: *e2e-test-config
@@ -219,8 +221,6 @@ tolerant-e2e-tests-deploy:
       when: never
     - if: $NIGHTLY == "TRUE"
       when: manual
-      variables:
-        OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_DEV}
     - if: $CI_COMMIT_BRANCH == 'develop'
       when: manual
     - when: manual
