ipng : make mongo db root pass configurable from env

--- a/.env.dist
+++ b/.env.dist
@@ -79,3 +79,5 @@ RGPD_DATA=./src/main/resources/rgpd/rgpd-template.json
 # Only needed if IPNG is to be activated
 IPNG_HOST=<domain of IPNG nodes eg ipng.libriciel.fr>
 IPNG_MSPID=<IPNG MSP id>
+MONGO_DB_USR=root
+MONGO_DB_PWD=rootpassToChange
