--- a/docker-compose.ipng.yml
+++ b/docker-compose.ipng.yml
@@ -37,6 +37,8 @@ services:
       - KEYCLOAK_CLIENT_SECRET
       - IPNG_HOST
       - IPNG_MSPID
+      - MONGO_DB_USR
+      - MONGO_DB_PWD
     volumes:
       - ./data/ipng/wallet:/wallet
       - ./data/ipng/ca-certs:/crypto-config
@@ -46,6 +48,9 @@ services:
 
   mongo:
     image: mongo:4.2.18-bionic
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_DB_USR}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_DB_PWD}
     volumes:
       - ./data/ipng/cache-db:/data/db:rw
     ports:
