--- a/src/main/resources/ipng/application.properties
+++ b/src/main/resources/ipng/application.properties
@@ -34,7 +34,13 @@ swagger.oauth2.client-id=ipcore-web
 blockchain-access.ca-name=ca.${IPNG_HOST}
 blockchain-access.ca-url=https://ca.${IPNG_HOST}:443
 blockchain-access.ca-pem-file=crypto-config/ca/ca.${IPNG_HOST}-cert.pem
+
 blockchain-access.connection-profile-file=connection-profile.yml
 
 #blockchain-access.org-name=org1
 blockchain-access.org-msp-id=${IPNG_MSPID}
+
+#blockchain-access.ca-admin-pass=
+
+spring.data.mongodb.username=${MONGO_DB_USR}
+spring.data.mongodb.password=${MONGO_DB_PWD}
