ipng : specify auth database for mongo

--- a/src/main/resources/ipng/application.properties
+++ b/src/main/resources/ipng/application.properties
@@ -44,3 +44,4 @@ blockchain-access.org-msp-id=${IPNG_MSPID}
 
 spring.data.mongodb.username=${MONGO_DB_USR}
 spring.data.mongodb.password=${MONGO_DB_PWD}
+spring.data.mongodb.authentication-database=admin
