IPNG : Set org name as mspId by default

--- a/src/main/resources/ipng/application.properties
+++ b/src/main/resources/ipng/application.properties
@@ -37,7 +37,7 @@ blockchain-access.ca-pem-file=crypto-config/ca/ca.${IPNG_HOST}-cert.pem
 
 blockchain-access.connection-profile-file=connection-profile.yml
 
-#blockchain-access.org-name=org1
+blockchain-access.org-name=${IPNG_MSPID}
 blockchain-access.org-msp-id=${IPNG_MSPID}
 
 #blockchain-access.ca-admin-pass=
