--- a/src/gatling/resources/application.conf
+++ b/src/gatling/resources/application.conf
@@ -1,4 +1,5 @@
-# i-Parapheur
+#
+# iparapheur
 # Copyright (C) 2018-2019 Libriciel-SCOP
 #
 # This program is free software: you can redistribute it and/or modify
@@ -13,6 +14,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
+#
 
 tests.repeat_count=1
 
