--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -1,5 +1,5 @@
 #
-# i-Parapheur Core
+# iparapheur Core
 # Copyright (C) 2018-2022 Libriciel-SCOP
 #
 # This program is free software: you can redistribute it and/or modify
