WIP: pass all password and db users as env var

--- a/.env.dist
+++ b/.env.dist
@@ -41,6 +41,13 @@ POSTGRES_PORT=5432
 POSTGRES_USER=root
 POSTGRES_PASSWORD=libriciel2k18
 
+CORE_DB_USER=ipcore
+CORE_DB_PASSWORD=ipcore
+
+QUARTZ_DB_USER=quartz
+QUARTZ_DB_PASSWORD=quartz
+
+
 KEYCLOAK_AUTH_PROTOCOL=https
 KEYCLOAK_HOST=keycloak
 KEYCLOAK_PORT=8080
@@ -50,9 +57,13 @@ KEYCLOAK_CLIENT_SECRET=<random-uuid>
 KEYCLOAK_WEB_CLIENT_ID=ipcore-web
 INITIAL_KEYCLOAK_ADMIN_USER=admin
 INITIAL_KEYCLOAK_ADMIN_PASSWORD=admin
-KEYCLOAK_DB_DATABASE=keycloak
+
+#KEYCLOAK_DB_DATABASE=keycloak
+
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
+
+KEYCLOAK_RESTADMIN_PASSWORD=admin
 
 
 INITIAL_IPARAPHEUR_ADMIN_USER=user
@@ -60,6 +71,23 @@ INITIAL_IPARAPHEUR_ADMIN_PASSWORD=password
 
 CONTENT_HOST=alfresco
 CONTENT_PORT=8080
+CONTENT_DB_USR=alfresco
+CONTENT_DB_PASSWORD=alfresco
+CONTENT_USER=admin
+CONTENT_PASSWORD=admin
+
+WORKFLOW_DB_USER=flowable
+WORKFLOW_DB_PASSWORD=flowable
+
+SECUREMAIL_DB_USER=pastellconnector
+SECUREMAIL_DB_PASSWORD=pastellconnector
+
+
+
+
+
+
+
 
 SECRET_PROTOCOL=http
 SECRET_HOST=vault
