pass all needed env var (DB pass) to each service

--- a/.env.dist
+++ b/.env.dist
@@ -71,7 +71,7 @@ INITIAL_IPARAPHEUR_ADMIN_PASSWORD=password
 
 CONTENT_HOST=alfresco
 CONTENT_PORT=8080
-CONTENT_DB_USR=alfresco
+CONTENT_DB_USER=alfresco
 CONTENT_DB_PASSWORD=alfresco
 CONTENT_USER=admin
 CONTENT_PASSWORD=admin
