--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,10 @@ services:
     environment:
       - POSTGRES_HOST
       - POSTGRES_PORT
+      - CORE_DB_USER
+      - CORE_DB_PASSWORD
+      - QUARTZ_DB_USER
+      - QUARTZ_DB_PASSWORD
       - CONTENT_HOST
       - CONTENT_PORT
       - CONTENT_USER
@@ -126,6 +130,9 @@ services:
     restart: unless-stopped
     tty: true
     mem_limit: 768M
+    environment:
+      - WORKFLOW_DB_USER
+      - WORKFLOW_DB_PASSWORD
     depends_on:
       postgres:
         condition: service_healthy
@@ -170,6 +177,8 @@ services:
       - POSTGRES_HOST=postgres
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - SECUREMAIL_DB_USER
+      - SECUREMAIL_DB_PASSWORD
 
 
   external-signature-connector:
