--- a/.env.dist
+++ b/.env.dist
@@ -47,7 +47,6 @@ CORE_DB_PASSWORD=ipcore
 QUARTZ_DB_USER=quartz
 QUARTZ_DB_PASSWORD=quartz
 
-
 KEYCLOAK_AUTH_PROTOCOL=https
 KEYCLOAK_HOST=keycloak
 KEYCLOAK_PORT=8080
@@ -62,9 +61,7 @@ INITIAL_KEYCLOAK_ADMIN_PASSWORD=admin
 
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
-
 KEYCLOAK_RESTADMIN_PASSWORD=admin
-
 
 INITIAL_IPARAPHEUR_ADMIN_USER=user
 INITIAL_IPARAPHEUR_ADMIN_PASSWORD=password
@@ -82,12 +79,8 @@ WORKFLOW_DB_PASSWORD=flowable
 SECUREMAIL_DB_USER=pastellconnector
 SECUREMAIL_DB_PASSWORD=pastellconnector
 
-
-
-
-
-
-
+QUARTZ_DB_USER=quartz
+QUARTZ_DB_PASSWORD=quartz
 
 SECRET_PROTOCOL=http
 SECRET_HOST=vault
