uncomment keycloak DB name env var from env dist

--- a/.env.dist
+++ b/.env.dist
@@ -58,7 +58,7 @@ KEYCLOAK_WEB_CLIENT_ID=ipcore-web
 INITIAL_KEYCLOAK_ADMIN_USER=admin
 INITIAL_KEYCLOAK_ADMIN_PASSWORD=admin
 
-#KEYCLOAK_DB_DATABASE=keycloak
+KEYCLOAK_DB_DATABASE=keycloak
 
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
