--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
 
 
   core:
-    image: registry.libriciel.fr:443/public/signature/ip-core:1.1.0
+    image: registry.libriciel.fr:443/public/signature/ip-core:1.1.1
     restart: unless-stopped
     tty: true
     mem_limit: 1G
@@ -111,13 +111,13 @@ services:
 
 
   web:
-    image: registry.libriciel.fr:443/public/signature/ip-web:1.2.0
+    image: registry.libriciel.fr:443/public/signature/ip-web:1.2.1
     restart: unless-stopped
     tty: true
     mem_limit: 64M
     environment:
       - APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
-      - VERSION=5.0.0-RC1
+      - VERSION=5.0.0
       - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL}://${APPLICATION_HOST}/auth
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID=${KEYCLOAK_WEB_CLIENT_ID}
@@ -126,7 +126,7 @@ services:
 
 
   workflow:
-    image: registry.libriciel.fr/public/signature/workflow:1.6.0
+    image: registry.libriciel.fr/public/signature/workflow:1.6.2
     restart: unless-stopped
     tty: true
     mem_limit: 768M
@@ -169,7 +169,7 @@ services:
 
 
   pastell-connector:
-    image: registry.libriciel.fr/public/signature/pastell-connector:1.3.6
+    image: registry.libriciel.fr/public/signature/pastell-connector:1.3.7
     restart: unless-stopped
     tty: true
     mem_limit: 512M
@@ -189,7 +189,7 @@ services:
 
 
   legacy-bridge:
-    image: registry.libriciel.fr/public/signature/legacy-bridge:1.2.6
+    image: registry.libriciel.fr/public/signature/legacy-bridge:1.3.0
     restart: unless-stopped
     tty: true
     mem_limit: 512M
