--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -296,11 +296,6 @@ dev-deploy:
     REPORT_NAME: "Karate - tests strict - ${KARATE_TENANT}"
     KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags ${KARATE_TENANT} --tags ~@fixme-ip5 --tags ~@ignore "
 
-.tolerant-e2e-tests-test:
-  extends: [ .e2e-tests ]
-  variables:
-    REPORT_NAME: "Karate - tests tolerant - ${KARATE_TENANT}"
-    KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags ${KARATE_TENANT} --tags ~@ignore "
 
 strict-e2e-tests-test-demo-simple-bde:
   extends: [ .strict-e2e-tests-test ]
@@ -342,52 +337,19 @@ strict-e2e-tests-test-metadonnees:
       optional: true
   allow_failure: false
 
-tolerant-e2e-tests-test-demo-simple-bde:
-  extends: [ .tolerant-e2e-tests-test ]
-  stage: e2e-tests-tolerant
+tolerant-e2e-tests-tests:
+  extends: [ .e2e-tests ]
   variables:
-    KARATE_TENANT: "@demo-simple-bde"
+    REPORT_NAME: "Karate - tests tolerant - ${KARATE_TENANT}"
+    KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags ${KARATE_TENANT} --tags ~@ignore "
   needs: [ tolerant-e2e-tests-deploy ]
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
       when: never
     - when: on_success
   allow_failure: true
-
-tolerant-e2e-tests-test-formats-de-signature:
-  extends: [ .tolerant-e2e-tests-test ]
-  stage: e2e-tests-tolerant
-  variables:
-    KARATE_TENANT: "@formats-de-signature"
-  needs: [ tolerant-e2e-tests-deploy ]
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
-      when: never
-    - when: on_success
-  allow_failure: true
-
-tolerant-e2e-tests-test-legacy-bridge:
-  extends: [ .tolerant-e2e-tests-test ]
-  stage: e2e-tests-tolerant
-  variables:
-    KARATE_TENANT: "@legacy-bridge"
-  needs: [ tolerant-e2e-tests-deploy ]
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
-      when: never
-    - when: on_success
-  allow_failure: true
-
-tolerant-e2e-tests-test-metadonnees:
-  extends: [ .tolerant-e2e-tests-test ]
-  stage: e2e-tests-tolerant
-  variables:
-    KARATE_TENANT: "@metadonnees"
-  needs: [ tolerant-e2e-tests-deploy ]
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
-      when: never
-    - when: on_success
-  allow_failure: true
+  parallel:
+    matrix:
+      - KARATE_TENANT: ["@demo-simple-bde", "@formats-de-signature", "@legacy-bridge", "@metadonnees"]
 
 # </editor-fold desc="E2e tests">
