--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ variables:
   IPARAPHEUR_DOCKER_ELEMENTS_PATH: "/opt/iParapheur"
   INIT_SCRIPT: "ip5-compose-dev.sh"
   DOCKER_COMPOSE_OVERRIDES_DEV: "docker-compose.override.dev.yml"
-  DOCKER_COMPOSE_OVERRIDES_TAG: "docker-compose.override.tests-linux.yml"
+  DOCKER_COMPOSE_OVERRIDES_TAG: ""
 
 
 .e2e-test-config:
@@ -46,7 +46,7 @@ variables:
     SSH_PRIVATE_KEY_B64: ${E2E_TESTS_SSH_PRIVATE_KEY_B64}
     RESET_DATA: "TRUE"
     OVERWRITE_ADMIN_PASSWORD: "TRUE"
-    OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_DEV}
+    OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_TAG}
   environment: &e2e-test-environment
     name: Charge/Tests e2e
     url: https://${E2E_TESTS_TARGET_SERVER_URL}
