--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -286,7 +286,7 @@ dev-deploy:
       - build/karate-reports
       - build/karate-tests-fixme-ip-tag.txt
 
-strict-e2e-tests-test:
+strict-e2e-tests:
   extends: [ .e2e-tests ]
   stage: e2e-tests-strict
   variables:
@@ -300,7 +300,7 @@ strict-e2e-tests-test:
     matrix:
       - KARATE_TEST_SET: [ "demo-simple-bde", "formats-de-signature", "legacy-bridge", "metadonnees" ]
 
-tolerant-e2e-tests-tests:
+tolerant-e2e-tests:
   extends: [ .e2e-tests ]
   stage: e2e-tests-tolerant
   variables:
@@ -310,7 +310,7 @@ tolerant-e2e-tests-tests:
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
       when: never
-    - when: on_success
+    - when: manual
   allow_failure: true
   parallel:
     matrix:
