Move the service in the appropriate compose

--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -187,6 +187,6 @@ services:
       - ./src/main/resources/prometheus/prometheus-dev.yml:/etc/prometheus/prometheus.yml
 
 
-  filetransfer:
-    ports:
-      - "1807:8080"
+#  filetransfer:
+#    ports:
+#      - "1807:8080"
