--- a/docker-compose.ipng.yml
+++ b/docker-compose.ipng.yml
@@ -63,3 +63,16 @@ services:
   core:
     volumes:
       - ./src/main/resources/core/application-ipng.yml:/application.yml
+
+
+  filetransfer:
+    image: dutchcoders/transfer.sh:v1.2.6
+    mem_limit: 256M
+    restart: unless-stopped
+    command: --provider local --basedir /data/ --temp-path /tmp/
+    volumes:
+      - ./data/transfer/data:/data/
+      - ./data/transfer/tmp:/tmp/
+    environment:
+      - RANDOM_TOKEN_LENGTH=0
+
