--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
 
 
   core:
-    image: registry.libriciel.fr:443/public/signature/ip-core:1.1.1
+    image: registry.libriciel.fr:443/public/signature/ip-core:1.1.2
     restart: unless-stopped
     tty: true
     mem_limit: 1G
@@ -111,7 +111,7 @@ services:
 
 
   web:
-    image: registry.libriciel.fr:443/public/signature/ip-web:1.2.1
+    image: registry.libriciel.fr:443/public/signature/ip-web:1.2.2
     restart: unless-stopped
     tty: true
     mem_limit: 64M
@@ -126,7 +126,7 @@ services:
 
 
   workflow:
-    image: registry.libriciel.fr/public/signature/workflow:1.6.2
+    image: registry.libriciel.fr/public/signature/workflow:1.6.3
     restart: unless-stopped
     tty: true
     mem_limit: 768M
@@ -189,7 +189,7 @@ services:
 
 
   legacy-bridge:
-    image: registry.libriciel.fr/public/signature/legacy-bridge:1.3.0
+    image: registry.libriciel.fr/public/signature/legacy-bridge:1.3.1
     restart: unless-stopped
     tty: true
     mem_limit: 512M
@@ -224,51 +224,18 @@ services:
 
 
   alfresco:
-    image: alfresco/alfresco-content-repository-community:7.2.1
+    image: registry.libriciel.fr:443/public/signature/ip-alfresco:7.2.1.0
     restart: unless-stopped
     tty: true
     mem_limit: 1536M
     environment:
-      JAVA_TOOL_OPTIONS: "
-        -Dencryption.keystore.type=JCEKS
-        -Dencryption.cipherAlgorithm=DESede/CBC/PKCS5Padding
-        -Dencryption.keyAlgorithm=DESede
-        -Dencryption.keystore.location=/usr/local/tomcat/shared/classes/alfresco/extension/keystore/keystore
-        -Dmetadata-keystore.password=mp6yc0UD9e
-        -Dmetadata-keystore.aliases=metadata
-        -Dmetadata-keystore.metadata.password=oKIWzVdEdA
-        -Dmetadata-keystore.metadata.algorithm=DESede
-      "
-      # TODO : Link to Solr6 with the params : -Dindex.subsystem.name=solr6 -Dsolr.host=solr6 -Dsolr.port=8983 -Dsolr.http.connection.timeout=1000 -Dsolr.secureComms=none -Dsolr.base.url=/solr
-      # TODO : Test a link to an external MS Office with the parameter -Daos.baseUrlOverwrite=http://localhost:8080/alfresco/aos
-
-      # Temporarily removed :
-      # -XX:+UseContainerSupport
-      # -XX:MinRAMPercentage=50
-      # -XX:MaxRAMPercentage=80
-      # Container support is broken for JDK 11 on Docker engine 20.10.12 (default on Ubuntu 22.04)
-      # We must use a 'hard' limit (-Xmx) for the heap to avoid overwhelming memory consumption
-      JAVA_OPTS: "
-        -Ddeployment.method=DOCKER_COMPOSE
-        -Xmx768M
-        -Dalfresco.host=${CONTENT_HOST}
-        -Dalfresco.port=${CONTENT_PORT}
-        -Dsystem.workflow.engine.activiti.enabled=false
-        -Dcsrf.filter.enabled=false
-        -Ddb.driver=org.postgresql.Driver
-        -Ddb.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/alfresco
-        -Ddb.username=${CONTENT_DB_USER}
-        -Ddb.password=${CONTENT_DB_PASSWORD}
-        -Dmessaging.broker.url=\"failover:(nio://activemq:61616)?timeout=3000&jms.useCompression=true\"
-        -Dtransform.service.enabled=true
-        -Dcsrf.filter.enabled=false
-        -DlocalTransform.core-aio.url=http://transform-core-aio:8090/
-      "
-    healthcheck:
-      test: [ "CMD", "curl", "-X", "GET", "-f", "http://localhost:8080/alfresco/api/-default-/public/alfresco/versions/1/probes/-ready-" ]
-      timeout: 2s
-      interval: 5s
-      retries: 60
+      - XMX_SIZE=768M
+      - CONTENT_HOST
+      - CONTENT_PORT
+      - POSTGRES_HOST
+      - POSTGRES_PORT
+      - CONTENT_DB_USER
+      - CONTENT_DB_PASSWORD
     depends_on:
       postgres:
         condition: service_healthy
@@ -278,11 +245,6 @@ services:
         condition: service_started
     volumes:
       - ./data/alfresco:/usr/local/tomcat/alf_data
-      # DOC: file needs to end in -context.xml and to be in this location.
-      # Details on (Deployment - App Server) -> https://docs.alfresco.com/6.2/references/dev-extension-points-content-model-define-and-deploy.html
-      - ./src/main/resources/content/alfresco-global.properties:/usr/local/tomcat/shared/classes/alfresco-global.properties
-      - ./src/main/resources/content/ip-custom-models.xml:/usr/local/tomcat/shared/classes/alfresco/extension/ip-custom-models.xml
-      - ./src/main/resources/content/custom-model-context.xml:/usr/local/tomcat/shared/classes/alfresco/extension/custom-model-context.xml
 
 
   transform-core-aio:
