--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -85,6 +85,8 @@ services:
 
   libersign:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/signature/libersign:latest
+    ports:
+      - "8079:80"
 
 
   pdf-stamp:
