Pass root directory for all data as env var

--- a/.env.dist
+++ b/.env.dist
@@ -18,6 +18,8 @@
 
 # https://docs.docker.com/compose/environment-variables/
 
+
+DATA_ROOT_DIR=./data
 COMPOSE_PROJECT_NAME=iparapheur
 APPLICATION_PROTOCOL=https
 APPLICATION_HOST=iparapheur.dom.local
