--- a/.env.dist
+++ b/.env.dist
@@ -61,6 +61,7 @@ KEYCLOAK_DB_DATABASE=keycloak
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
 KEYCLOAK_RESTADMIN_PASSWORD=admin
+KEYCLOAK_SOAPUI_PASSWORD=admin
 
 INITIAL_IPARAPHEUR_ADMIN_USER=user
 INITIAL_IPARAPHEUR_ADMIN_PASSWORD=password
