--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -338,6 +338,8 @@ services:
       - INITIAL_KEYCLOAK_ADMIN_PASSWORD
       - INITIAL_IPARAPHEUR_ADMIN_USER
       - INITIAL_IPARAPHEUR_ADMIN_PASSWORD
+      - KEYCLOAK_RESTADMIN_PASSWORD
+      - KEYCLOAK_SOAPUI_PASSWORD
       - SMTP_HOST
       - SMTP_PORT
       - SMTP_USER
