Pass soapui password env var to legacy-bridge

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -206,6 +206,7 @@ services:
       - KEYCLOAK_CLIENT_ID
       - KEYCLOAK_WEB_CLIENT_ID
       - KEYCLOAK_CLIENT_SECRET
+      - KEYCLOAK_SOAPUI_PASSWORD
       - MAIL_FROM
 
 
