MR fix : use prod-like conf as default in .env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -19,7 +19,7 @@
 # https://docs.docker.com/compose/environment-variables/
 
 
-DATA_ROOT_DIR=./data
+DATA_ROOT_DIR=/data/iparapheur
 COMPOSE_PROJECT_NAME=iparapheur
 APPLICATION_PROTOCOL=https
 APPLICATION_HOST=iparapheur.dom.local
