--- a/.env.dist
+++ b/.env.dist
@@ -33,7 +33,7 @@ SMTP_PORT=25
 SMTP_USER=
 SMTP_PASSWORD=
 SMTP_ENABLE_AUTH=false
-SMTP_MAIL_FROM=ne-pas-repondre@adrien.local
+SMTP_MAIL_FROM=ne-pas-repondre@dom.local
 SMTP_ENABLE_SSL=false
 SMTP_ENABLE_START_TLS=false
 
