use our own Nginx image

--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -21,13 +21,11 @@ services:
 
 
   nginx:
-    image: nginx:alpine
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/nginx:develop
     extra_hosts:
       - "host.docker.internal:host-gateway"
     mem_limit: 64M
     memswap_limit: 64M
-    volumes:
-      - ./src/main/resources/nginx/iparapheur.develop.conf.template:/etc/nginx/templates/iparapheur.conf.template
 
 
   core:
