Update dev-specific variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,8 @@ variables:
     TARGETED_ENVIRONNEMENT_USER: ${DEV_TARGET_SERVER_USER}
     SSH_PRIVATE_KEY_B64: ${DEV_SSH_PRIVATE_KEY_B64}
     RESET_DATA: "FALSE"
-    OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_DEV}
+    OVERRIDE_DOCKER_COMPOSE_FILES: ""
+    IPARAPHEUR_DOCKER_ELEMENTS_PATH: "/opt/iparapheur"
   environment: &dev-environment
     name: Dev
     url: https://${DEV_TARGET_SERVER_URL}
